<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <DUT Name="ENUM_ZonePlate_States" Id="{a5fb2a43-e584-4fa2-92ec-551e5e3c8e2b}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
TYPE ENUM_ZonePlate_States :
(
	Unknown := 0,
    OUT := 1,
	Yag := 2,
	FZP860_1 := 3,   //Ne1
	FZP860_2 := 4,   //Ne2
	FZP860_3 := 5,   //Ne3
	FZP750_1 := 6,   //3w1
	FZP750_2 := 7,   //3w2
	FZP530_1 := 8,   //o1
	FZP530_2 := 9,   //o2
	FZP460_1 := 10,   //Ti1
	FZP460_2 := 11,   //Ti2
	FZP410_1 := 12,   //N1
	FZP410_2 := 13,   //N2
	FZP290_1 := 14,   // C1
	FZP290_2 := 15,   //C2
	FZP250_1 := 16    //w1
	
	
	//TODO: is add all therest
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>