<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <POU Name="PRG_PF1K4_WFS_TARGET" Id="{55cdfddd-07ab-43e7-a2b9-23f598a27404}" SpecialFunc="None">
    <Declaration><![CDATA[  PROGRAM PRG_PF1K4_WFS_TARGET
VAR
    {attribute 'pytmc' := '
        pv: PF1K4:WFS
        io: io
    '}
    {attribute 'TcLinkTo' := '.fbThermoCouple1.bError 		:= TIIB[PF1K4-EL3314-E5]^TC Inputs Channel 1^Status^Error;
                              .fbThermoCouple1.bUnderrange	:= TIIB[PF1K4-EL3314-E5]^TC Inputs Channel 1^Status^Underrange;
                              .fbThermoCouple1.bOverrange 	:= TIIB[PF1K4-EL3314-E5]^TC Inputs Channel 1^Status^Overrange;
                              .fbThermoCouple1.iRaw 		:= TIIB[PF1K4-EL3314-E5]^TC Inputs Channel 1^Value;
                              .fbThermoCouple2.bError 		:= TIIB[PF1K4-EL3314-E5]^TC Inputs Channel 2^Status^Error;
                              .fbThermoCouple2.bUnderrange 	:= TIIB[PF1K4-EL3314-E5]^TC Inputs Channel 2^Status^Underrange;
                              .fbThermoCouple2.bOverrange 	:= TIIB[PF1K4-EL3314-E5]^TC Inputs Channel 2^Status^Overrange;
                              .fbThermoCouple2.iRaw 		:= TIIB[PF1K4-EL3314-E5]^TC Inputs Channel 2^Value;
                              .fbFlowMeter.iRaw             := TIIB[IM5K4-EL3052-E5]^AI Standard Channel 1^Value'} // same cooling loop as IM5K4
    fbPF1K4: FB_WFS;

    fbStateSetup: FB_StateSetupHelper;

    stDefault: ST_PositionState :=(
        fVelocity := 1,
//		bMoveOK := TRUE,
        bValid := TRUE
    );

//    stSiBP: ST_BeamParams := PMPS_GVL.cstFullBeam;

//    bInit: BOOL;
    bSP1K4AttOut: BOOL;
    bSP1K4FzpOut: BOOL;
    bSP1K4Out: BOOL;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[bSP1K4AttOut := GVL_TcGVL.eSP1K4ATT = ENUM_SolidAttenuator_States.OUT;
bSP1K4FzpOut := GVL_TcGVL.eSP1K4FZP = ENUM_ZonePlate_States.OUT;
bSP1K4Out := bSP1K4AttOut AND bSP1K4FzpOut;



// Exclusion range specified by M. Seaberg 2021-5-19
//stSiBP.neVRange := F_eVExcludeRange(1.75E3, 3.15E3);
// Drop transmission to 20%
//stSiBP.nTran := 0.20;

fbStateSetup(StPositionState:=stDefault, bSetDefault:=TRUE);

fbStateSetup(StPositionState:=fbPF1K4.stOut, fposition:=-10.5, sPmpsState := 'PF1K4:WFS-OUT');
fbStateSetup(StPositionState:=fbPF1K4.stTarget1, fposition:=-93.033, sPmpsState := 'PF1K4:WFS-TARGET1');
fbStateSetup(StPositionState:=fbPF1K4.stTarget2, fposition:=-78.658, sPmpsState := 'PF1K4:WFS-TARGET2');
fbStateSetup(StPositionState:=fbPF1K4.stTarget3, fposition:=-64.282, sPmpsState := 'PF1K4:WFS-TARGET3');
fbStateSetup(StPositionState:=fbPF1K4.stTarget4, fposition:=-49.907, sPmpsState := 'PF1K4:WFS-TARGET4');
fbStateSetup(StPositionState:=fbPF1K4.stTarget5, fposition:=-35.533, sPmpsState := 'PF1K4:WFS-TARGET5');

fbPF1K4.stOut.bMoveOk := TRUE;
fbPF1K4.stTarget1.bMoveOk := bSP1K4Out;
fbPF1K4.stTarget2.bMoveOk := bSP1K4Out;
fbPF1K4.stTarget3.bMoveOk := bSP1K4Out;
fbPF1K4.stTarget4.bMoveOk := bSP1K4Out;
fbPF1K4.stTarget5.bMoveOk := bSP1K4Out;

{*
//fbPF1K4.stOut.fPosition := -10.5;
fbPF1K4.stOut.bUseRawCounts := FALSE;
fbPF1K4.stOut.bValid := TRUE;
fbPF1K4.stOut.bMoveOk := TRUE;
fbPF1K4.stOut.stPMPS.sPmpsState := 'PF1K4:WFS-OUT';

//fbPF1K4.stTarget1.fPosition := -93.033;
fbPF1K4.stTarget1.bUseRawCounts := FALSE;
fbPF1K4.stTarget1.bValid := TRUE;
fbPF1K4.stTarget1.bMoveOk := TRUE;
fbPF1K4.stTarget1.stPMPS.sPmpsState := 'PF1K4:WFS-TARGET1';

//fbPF1K4.stTarget2.fPosition := -78.658;
fbPF1K4.stTarget2.bUseRawCounts := FALSE;
fbPF1K4.stTarget2.bValid := TRUE;
fbPF1K4.stTarget2.bMoveOk := TRUE;
fbPF1K4.stTarget2.stPMPS.sPmpsState := 'PF1K4:WFS-TARGET2';

//fbPF1K4.stTarget3.fPosition := -64.282;
fbPF1K4.stTarget3.bUseRawCounts := FALSE;
fbPF1K4.stTarget3.bValid := TRUE;
fbPF1K4.stTarget3.bMoveOk := TRUE;
fbPF1K4.stTarget3.stPMPS.sPmpsState := 'PF1K4:WFS-TARGET3';

//fbPF1K4.stTarget4.fPosition := -49.907;
fbPF1K4.stTarget4.bUseRawCounts := FALSE;
fbPF1K4.stTarget4.bValid := TRUE;
fbPF1K4.stTarget4.bMoveOk := TRUE;
fbPF1K4.stTarget4.stPMPS.sPmpsState := 'PF1K4:WFS-TARGET4';

//fbPF1K4.stTarget5.fPosition := -35.533;
fbPF1K4.stTarget5.bUseRawCounts := FALSE;
fbPF1K4.stTarget5.bValid := TRUE;
fbPF1K4.stTarget5.bMoveOk := TRUE;
fbPF1K4.stTarget5.stPMPS.sPmpsState := 'PF1K4:WFS-TARGET5';

 IF NOT bInit THEN
   bInit := TRUE;
   fbPF1K4.stOut.fPosition := -10.5;
   fbPF1K4.stTarget1.fPosition := -93.033;
   fbPF1K4.stTarget2.fPosition := -78.658;
   fbPF1K4.stTarget3.fPosition := -64.282;
   fbPF1K4.stTarget4.fPosition := -49.907;
   fbPF1K4.stTarget5.fPosition := -35.533;

END_IF
*}

fbPF1K4(
    fbArbiter := fbArbiter,
    fbFFHWO := fbFastFaultOutput1,
    stYStage := Main.M18,
    stZStage := Main.M19,
    sDeviceName := 'PF1K4:WFS',
    sTransitionKey := 'PF1K4:WFS-TRANSITION',
    bEnableMotion := TRUE,
    bEnableBeamParams := TRUE,
    bEnablePositionLimits := TRUE,
    eEnumGet => GVL_TcGVL.ePF1K4State,
    );
]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>